--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,6 @@ script:
     && (echo 'Idempotence test: pass' && exit 0)
     || (echo 'Idempotence test: fail' && exit 1)
 
-  # send a test tcp packet to logstash tcp input on port 1234
+  # wait for startup time & send a test tcp packet to logstash tcp input on port 1234
+  - sleep 10
   - nc -zv localhost 1234
